[package]
name = "sqlx-mssql-test"
version = "0.1.0"
authors = ["Max Nachlinger"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", default-features = false, features = [ "runtime-tokio", "macros", "mssql" ] }
